fix(backend): added logging method
Signed-off-by: Abhiuday <contact.abhiuday@gmail.com>

--- a/backend/Taskfile.yaml
+++ b/backend/Taskfile.yaml
@@ -8,7 +8,7 @@ tasks:
   build:
     desc: Builds the docker image
     cmds:
-      - docker build -f deployment/Dockerfile -t aeswibon/helm-deployer:latest .
+      - docker build -f Dockerfile -t aeswibon/helm-deployer:latest .
   push:
     desc: Pushes the docker image to docker hub
     cmds:
