--- a/backend/deployment/service.yaml
+++ b/backend/deployment/service.yaml
@@ -7,7 +7,7 @@ spec:
     app: helm-deployer
   ports:
     - protocol: TCP
-      port: 80
+      port: 8080
       targetPort: 8080
   type: LoadBalancer
 ---
@@ -15,12 +15,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres-svc
-  labels:
-    app: postgres
 spec:
-  type: ClusterIP
-  ports:
-    - port: 5432
-      targetPort: 5432
   selector:
     app: postgres
+  type: ClusterIP
+  ports:
+    - protocol: TCP
+      port: 5432
+      targetPort: 5432
