--- a/backend/Taskfile.yaml
+++ b/backend/Taskfile.yaml
@@ -8,30 +8,32 @@ tasks:
   build:
     desc: Builds the docker image
     cmds:
-      - docker build -f Dockerfile -t aeswibon/helm-deployer:latest .
+      - docker build -f Dockerfile -t aeswibon/shepherd:latest .
   push:
     desc: Pushes the docker image to docker hub
     cmds:
       - task: build
-      - docker image push aeswibon/helm-deployer:latest
+      - docker image push aeswibon/shepherd:latest
   deploy:
     desc: Deploys the application to kubernetes
     cmds:
+      - kubectl apply -f deployment/secret.yaml
       - kubectl apply -f deployment/pvc.yaml
       - kubectl apply -f deployment/deployment.yaml
       - kubectl apply -f deployment/service.yaml
   clean:
     desc: Cleans the docker image
     cmds:
-      - docker rmi aeswibon/helm-deployer:latest
+      - docker rmi aeswibon/shepherd:latest
   delete:
     desc: Deletes the application from kubernetes
     cmds:
       - kubectl delete -f deployment/deployment.yaml
       - kubectl delete -f deployment/service.yaml
       - kubectl delete -f deployment/pvc.yaml
+      - kubectl delete -f deployment/secret.yaml
       - task: clean
   logs:
     desc: Shows the logs of the application
     cmds:
-      - kubectl logs -l app=helm-deployer
+      - kubectl logs -l app=shepherd -f
