--- a/backend/deployment/deployment.yaml
+++ b/backend/deployment/deployment.yaml
@@ -1,37 +1,53 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: helm-deployer
-  labels:
-    app: helm-deployer
+  name: shepherd
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: helm-deployer
+      app: shepherd
   template:
     metadata:
       labels:
-        app: helm-deployer
+        app: shepherd
     spec:
       containers:
-        - name: helm-deployer
-          image: aeswibon/helm-deployer:latest
+        - name: shepherd
+          image: aeswibon/shepherd:latest
           ports:
             - containerPort: 8080
           env:
             - name: DB_HOST
-              value: "postgres-svc"
+              valueFrom:
+                secretKeyRef:
+                  name: shepherd-config
+                  key: DB_HOST
             - name: DB_USER
-              value: "postgres"
+              valueFrom:
+                secretKeyRef:
+                  name: shepherd-config
+                  key: DB_USER
             - name: DB_PASSWORD
-              value: "postgres"
+              valueFrom:
+                secretKeyRef:
+                  name: shepherd-config
+                  key: DB_PASSWORD
             - name: DB_NAME
-              value: "helm"
+              valueFrom:
+                secretKeyRef:
+                  name: shepherd-config
+                  key: DB_NAME
             - name: DB_PORT
-              value: "5432"
+              valueFrom:
+                secretKeyRef:
+                  name: shepherd-config
+                  key: DB_PORT
             - name: JWT_SECRET
-              value: "secret"
+              valueFrom:
+                secretKeyRef:
+                  name: shepherd-config
+                  key: JWT_SECRET
           resources:
             limits:
               cpu: "1"
@@ -43,39 +59,46 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres-deployment
-  labels:
-    app: postgres
+  name: shepherd-db
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: postgres
+      app: shepherd-db
   template:
     metadata:
       labels:
-        app: postgres
+        app: shepherd-db
     spec:
       containers:
-        - name: postgres
+        - name: shepherd-db
           image: postgres:alpine
           ports:
             - containerPort: 5432
           env:
             - name: POSTGRES_DB
-              value: "helm"
+              valueFrom:
+                secretKeyRef:
+                  name: shepherd-config
+                  key: DB_NAME
             - name: POSTGRES_USER
-              value: "postgres"
+              valueFrom:
+                secretKeyRef:
+                  name: shepherd-config
+                  key: DB_USER
             - name: POSTGRES_PASSWORD
-              value: "postgres"
+              valueFrom:
+                secretKeyRef:
+                  name: shepherd-config
+                  key: DB_PASSWORD
           resources:
             limits:
               cpu: "1"
               memory: "512Mi"
           volumeMounts:
-            - name: postgres-storage
+            - name: shepherd-storage
               mountPath: /var/lib/postgresql/data
       volumes:
-        - name: postgres-storage
+        - name: shepherd-storage
           persistentVolumeClaim:
-            claimName: postgres-pvc
+            claimName: shepherd-pvc
