--- a/backend/deployment/service.yaml
+++ b/backend/deployment/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: helm-deployer-svc
+  name: shepherd-svc
 spec:
   selector:
-    app: helm-deployer
+    app: shepherd
   ports:
     - protocol: TCP
       port: 8080
@@ -14,10 +14,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-svc
+  name: shepherd-db-svc
 spec:
   selector:
-    app: postgres
+    app: shepherd-db
   type: ClusterIP
   ports:
     - protocol: TCP
